deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-music
  labels:
    app: spring-music
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-music
  template:
    metadata:
      labels:
        app: spring-music
    spec:
      containers:
      - name: spring-music
        image: yanivomc/spring-music:latest
        ports:
        - containerPort: 8090
