my-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-service
  labels:
    app: spring-music
spec:
  type: ClusterIP
  selector:
    app: spring-music
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8080
