my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class:  nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /music
        backend:
          service:
            name: music-service
            port: 
              number: 8090
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: music-service
            port: 
              number: 8090
